# madrs

./: .gitignore  README.md  pyproject.toml
madrs/: __init__.py
